--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="header">
         <nav>
             <img src="images/logo.png" class="logo">
             <div>
-                <button class="language-btn">English <img src="images/down-icon.png" alt="down-icon"></button>
+                <button class="language-btn"> <i class="fa-solid fa-globe"></i> English <img src="images/down-icon.png" alt="down-icon"></button>
                 <button>Sign In</button>
             </div>
         </nav>
     </div>
 </body>
+
 </html>
