it will complete within 3 days

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav
         </div>
         <div class="header-content">
-            <h1>The biggest Indian hits. Ready to watch here from ₹ 149.</h1>
+            <h1>The biggest Indian hits. Ready to watch here <br> from ₹ 149.</h1>
             <h3>Join today. Cancel anytime.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <form class="email-signup">
