--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <form class="email-signup">
                 <input type="email" placeholder="Email-address" required>
-                <button type="button">Get Started</button>
+                <button type="button">Get Started   > </button>
             </form>
         </div>
         
