--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
         </div>
         
     </div>
+
+    <!-- ----------------------------------------------------------------page4----------------------------------------------------------- -->
+    <div class="page4">
+        <div class="text-content">
+            <h2>Watch everywhere</h2>
+            <p>Stream unlimited movies and TV shows on your <br>phone, tablet, laptop, and TV.</p>
+        </div>
+        <div class="image">
+            <img src="images/feature-3.png" alt="">
+        </div>
+    </div>
     
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
