--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
             <img src="images/feature-3.png" alt="">
         </div>
     </div>
+
+    <!-------------------------------------------------------- page5 ------------------------------------------------------------------>
+    <div class="page5">
+        <div class="image">
+            <img src="images/feature-4.png" alt="">
+        </div>
+        <div class="text-content">
+            <h2>Create profiles for kids</h2>
+            <p>Send children on adventures with their favourite characters in a space made just for them—free with your membership.
+
+            </p>
+        </div>
+        
+    </div>
+
     
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
