faq section complete

--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
 
                 </div>
             </ul>
+            <small>
+                Ready to watch? Enter your email to create or restart your membership.
+
+            </small>
+            <form class="email-signup">
+                <input type="email" placeholder="Email-address" required>
+                <button type="button">Get Started > </button>
+            </form>
+
         </div>
 
 
