--- a/index.html
+++ b/index.html
@@ -181,6 +181,33 @@
 
         </div>
 
+        <div class="footer">
+            <h3>Question? call 000-800-919-1694</h3>
+            <div class="row">
+                <div class="col">
+                    <a href="#">FAQ</a>
+                    <a href="#">Meadia Centre</a>
+                    <a href="#">Ways to watch</a>
+                    <a href="#">Coolie Preferences</a>
+                    <a href="#">Speed Test</a>
+                </div>
+                <div class="col">
+                    <a href="#">Help Center</a>
+                    <a href="#">Investor Relation</a>
+                    <a href="#">Term of Use</a>
+                    <a href="#">Corporate information</a>
+                    <a href="#">Legal Notice</a>
+                </div>
+                <div class="col">
+                    <a href="#">Account</a>
+                    <a href="#">Jobs</a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Only on Netflix </a>
+                </div>
+            </div>
+        </div>
+
 
 
         <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
