--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
                     <a href="#">Only on Netflix </a>
                 </div>
             </div>
+            <button class="language-btn"> <i class="fa-solid fa-globe"></i> English <img
+                src="images/down-icon.png" alt="down-icon"></button>
+                <p class="copyright-txt">Netflix India</p>
         </div>
 
 
